[tool.poetry]
name = "poetry-testi"
version = "0.1.0"
description = "poetryn testailua"
authors = ["Saana Ollikainen <saana.ollikainen@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
